[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/ChiKareGo2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Pause/Pause.gd" type="Script" id=2]


[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="Pause" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PauseC" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="PauseC"]
self_modulate = Color( 0, 0, 0, 0.823529 )
margin_right = 976.0
margin_bottom = 610.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="PauseC/Panel"]
margin_left = 287.754
margin_top = 147.939
margin_right = 673.754
margin_bottom = 214.939
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Continue" type="Button" parent="PauseC/Panel"]
anchor_left = 0.00460021
anchor_top = 0.0607234
anchor_right = 0.00460021
anchor_bottom = 0.0607234
margin_left = 359.188
margin_top = 257.044
margin_right = 580.188
margin_bottom = 325.044
custom_fonts/font = SubResource( 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Exit" type="Button" parent="PauseC/Panel"]
anchor_left = 0.00690041
anchor_top = -0.0938452
anchor_right = 0.00690041
anchor_bottom = -0.0938452
margin_left = 359.188
margin_top = 457.965
margin_right = 580.188
margin_bottom = 525.965
custom_fonts/font = SubResource( 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="PauseC/Panel/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="PauseC/Panel/Continue" to="PauseC" method="_on_Continue_pressed"]
[connection signal="pressed" from="PauseC/Panel/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="PauseC/Panel/Exit" to="PauseC" method="_on_Exit_pressed"]
